--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,24 @@
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
  <body>
-     <%= render 'layouts/partials/header' %>
+   <%= render 'layouts/partials/header' %>
+
+<div class="container">
+
+<%= render 'layouts/partials/sidebar' %>
+
+  
+
     <%= render 'layouts/partials/main' %>
-    <%= render 'layouts/partials/footer' %>
+
+
+</div>
+<%= render 'layouts/partials/footer' %>
+
   </body>
 </html>
+
+
+
