--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,64 +1,64 @@
-       <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">EcomSite</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                                <% if current_user %>
+ <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Site Ecommerce</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <form class="d-flex">
-                <button class="btn" type="submit">
-                Hello
-                <i class="bi bi-at"></i>
-                <%= current_user.username%>
-                </button>
-            </form>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav m-auto">
+                <li class="nav-item m-auto active">
+                    <%= link_to("Home", root_path, class: 'nav-link') %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to("Products", products_path, class: 'nav-link') %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to("Categories", products_path, class: 'nav-link') %>
+                </li>
+            </ul>
 
-             <form class="d-flex">
-                <button class="btn bi-pencil-square" type="submit" >
-                <%= link_to "Edit Profile", edit_user_registration_path %>
-                </button>
-            </form>
-
-            <form class="d-flex">
-                <button class="btn bi-box-arrow-in-right" type="submit" >
-                <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-                </button>
-            </form>
-        <% else %>
-
-            <form class="d-flex">
-            <button class="btn bi bi-box-arrow-in-right" type="submit">
-                 <span><%= link_to "Sign Up", new_user_registration_path %></span>
-            </button>
-            </form>
-
-            <span class="d-flex btn bi bi-person">
-                <%= link_to "Sign In", new_user_session_path %>
-            </span>        
-                    <% end %> 
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+            <form class="form-inline my-2 my-lg-0">
+                <div class="input-group input-group-sm">
+                        <%= search_form_for @q do |f| %>
+                            <%= f.search_field :title_cont, class:"form-control", placeholder:"Find your product ..." %>								
+                        <% end %>
+            
+            
+                        <div class="input-group-append">
+                        <button type="button" class="btn btn-secondary btn-number">
+                            <i class="fa fa-search"></i>
                         </button>
-                    </form>
-                    </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+                
+                <div class="dropdown show">
+                <a class="btn btn-light btn-sm ml-3 dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <% if current_user %>
+                    <i class="bi bi-person"></i>
+                    <span><%= current_user.username%></span>
+                </a>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li class="dropdown-item"><%= link_to "Edit Profile", edit_user_registration_path %>
+                    <li class="dropdown-item"><%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+                </div>
+                <% else %>
+                    <i class="bi bi-person"></i> Account
+                </a>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li class="dropdown-item"><%= link_to "Login", new_user_session_path %>
+                    <li class="dropdown-item"><%= link_to "Sign Up", new_user_registration_path %>
+                <% end %>
+                </div>
+                </div>
+                     <a class="btn btn-info btn-sm ml-3">
+                    <i class="fa fa-shopping-cart"></i> Cart
+                    <span class="badge badge-light">3</span>
+                </a>    
+            </form>
+            
+        </div>
+    </div>
+</nav> 
