--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,28 +10,38 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.rich_text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :stock %>
-    <%= form.number_field :stock %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-header bg-primary text-white"><i class="bi bi-plus-circle"></i> Add Product
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name"><%= form.label :title %></label>
+                            <%= form.text_field :title, class:"form-control", placeholder:"Your product title" %>
+                            
+                        </div>
+                       <div class="form-group">
+                            <label for="name"><%= form.label :stock %></label>
+                            <%= form.number_field :stock, class:"form-control", placeholder:"Stock quantity .."%>                            
+                        </div>
+                       <div class="form-group">
+                            <label for="name"><%= form.label :price %></label>
+                            <%= form.number_field :price, class:"form-control", placeholder:"Product price .."%>    
+                            
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Desc</label>
+                            <%= form.rich_text_area :description, class:"form-control"  %>
+                        </div>
+                        <div class="mx-auto">
+                        <%= form.submit class:"btn btn-light" %>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+</div>
 <% end %>
