--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,40 +1,27 @@
-<p id="notice"><%= notice %></p>
- <%= search_form_for @q do |f| %>
+<div class="container mt-5 mb-5">
+    <div class="d-flex justify-content-center row">
+        <% @products.each do |product| %>
+        <div class="col-md-10">
+            <div class="row p-2 bg-white border rounded">
+                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div>
+                <div class="col-md-6 mt-1">
+                    <h5><%= product.title %></h5>
+                    <div class="mt-1 mb-1 spec-1"><span>Category:</span></div>
+                </div>
+                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                    <div class="d-flex flex-row align-items-center">
+                        <h4 class="mr-1">$<%= product.price %></h4>
+                    </div>
+                    <h6 class="text-monospace">Stock: <%= product.stock %></h6>
+                    <div class="d-flex flex-column mt-4"><%= link_to 'Details', product, class:"btn btn-primary btn-sm" %><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to cart</button></div>
+                </div>
+            </div>
+        </div>
+        <% end %>
+    </div>
+</div>
 
-  <%= f.label "Title" %>
-  <%= f.search_field :title_cont %>
-  <%= sort_link(@q, :created_at, "Latest", default_order: :desc) %>
-  <%= f.submit %>
-<% end %>
 
-<h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Stock</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.stock %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
