--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Product</h1>
-
 <%= render 'form', product: @product %>
 
-<%= link_to 'Back', products_path %>
+<div class="badge badge-light"><i class="bi bi-arrow-return-left"> </i><%= link_to 'Back', products_path %>
+
+
