--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,77 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+    <div class="row">
+        <!-- Image -->
+        <div class="col-12 col-lg-6">
+            <div class="card bg-light mb-3">
+            <div class="card-header"> <%= @product.title %></div>
+                <div class="card-body">
+                    <a href="" data-toggle="modal" data-target="#productModal">
+                        <%= @product.title %>
+                        <p class="text-center">Zoom</p>
+                    </a>
+                </div>
+            </div>
+        </div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
+        <!-- Add to cart -->
+        <div class="col-12 col-lg-6 add_to_cart_block">
+        
+            <div class="card bg-light mb-3">
+                <div class="card-body">
+                    <p class="price"><%= @product.price %>$</p>
+                    <form>
+                                              <h5>Stock: <span class="badge badge-secondary"><%= @product.stock %></span></h5>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+                        <div class="form-group">
+                            <label>Quantity :</label>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <button type="button" class="quantity-left-minus btn btn-danger btn-number"  data-type="minus" data-field="">
+                                        <i class="fa fa-minus"></i>
+                                    </button>
+                                </div>
+                                <input type="text" class="form-control"  id="quantity" name="quantity" min="1" max="100" value="1">
+                                <div class="input-group-append">
+                                    <button type="button" class="quantity-right-plus btn btn-success btn-number" data-type="plus" data-field="">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="cart.html" class="btn btn-success btn-lg btn-block text-uppercase">
+                            <i class="fa fa-shopping-cart"></i> Add To Cart
+                        </a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<p>
-  <strong>Stock:</strong>
-  <%= @product.stock %>
-</p>
+    <div class="row">
+        <!-- Description -->
+        <div class="col-12">
+            <div class="card border-light mb-3">
+                <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-align-justify"></i> Description</div>
+                <div class="card-body">
+                    <p class="card-text">
+                      <%= @product.description %>
+                    </p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+                </div>
+            </div>
+        </div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+        <!-- Reviews -->
+        <div class="col-12" id="reviews">
+            <div class="card border-light mb-3">
+                <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-comment"></i> Reviews</div>
+                <div class="card-body">
+                    <div class="review">
+                      
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="badge badge-light"><i class="bi bi-arrow-return-left"> </i><%= link_to 'Back', products_path %>
+</div>
