--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -14,7 +14,7 @@
                     <%= link_to("Products", products_path, class: 'nav-link') %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to("Categories", products_path, class: 'nav-link') %>
+                    <%= link_to("Categories", categories_path, class: 'nav-link') %>
                 </li>
             </ul>
 
