--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -18,6 +18,18 @@
                 </div>
                 <div class="card-body">
                     <form>
+                        <div class="field form-group">
+                  <%= form.label :category %><br>
+                    <%#= select(:blog, :categories, @categories.collect {|cat| [cat.name, cat.id]},  {}, multiple: true ) %>
+                    <%= collection_check_boxes(:product, :categories, @categories, :id, :name) do |b|
+                      b.label { b.check_box + b.text}
+                      end
+                    %>
+                  </div>
+                      <div class="field form-group">
+                    <%= form.label :new_category %><br>
+                    <input type='text' name="product[new_categories]" class="form-control"  placeholder="Enter new categories here..... Separate with comma">
+                  </div>
                         <div class="form-group">
                             <label for="name"><%= form.label :title %></label>
                             <%= form.text_field :title, class:"form-control", placeholder:"Your product title" %>
