--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,11 @@
                 <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div>
                 <div class="col-md-6 mt-1">
                     <h5><%= product.title %></h5>
-                    <div class="mt-1 mb-1 spec-1"><span>Category:</span></div>
+                    <div class="mt-1 mb-1 spec-1"><span>Category: 
+                    <% product.categories.each do |cat| %>
+                    <%= cat.name %> &nbsp;
+                    <% end %>
+                    </span></div>
                 </div>
                 <div class="align-items-center align-content-center col-md-3 border-left mt-1">
                     <div class="d-flex flex-row align-items-center">
