new update 15sep

--- a/app/views/layouts/partials/_main.html.erb
+++ b/app/views/layouts/partials/_main.html.erb
@@ -9,15 +9,17 @@
     </div>
 <% end %>
 </section>
-
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-3">
             <div class="card bg-light mb-3">
                 <div class="card-header bg-primary text-white text-uppercase"><i class="fa fa-list"></i> Categories</div>
                 <ul class="list-group category_block">
-                <% #not sure about this %>
-
+                 <% Category.all.each do |category| %>
+                <button class="list-group-item list-group-item-action">
+                <%= link_to category.name, products_path(categories: category.name) %>
+                </button>
+                <% end %>
                 </ul>
             </div>
             <div class="card bg-light mb-3">
