--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,5 +1,6 @@
  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
+
         <a class="navbar-brand"><%= link_to("Site Ecommerce", root_path, class: 'navbar-brand') %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,13 +22,17 @@
             <form class="form-inline my-2 my-lg-0">
                 <div class="input-group input-group-sm">
                         <%= search_form_for @q do |f| %>
-                            <%= f.search_field :title_cont, class:"form-control", placeholder:"Find your product ..." %>								
+                            <%= f.search_field :title_or_action_text_rich_text_body_cont, class:"form-control", placeholder:"Find your product ..." %>								
                         <% end %>
             
-            
-                        <div class="input-group-append">
+
+                        <div class="input-group-append dropdown show" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <button type="button" class="btn btn-secondary btn-number">
-                            <i class="fa fa-search"></i>
+                            <i class="bi bi-three-dots-vertical"></i>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <li class="dropdown-item"> <%= sort_link(@q, :created_at, "created time", default_order: :desc) %>
+                    <li class="dropdown-item"><%= sort_link(@q, :created_at, "created time", default_order: :desc) %>
+                </div>
                         </button>
                     </div>
                 </div>
@@ -53,6 +58,7 @@
                 <% end %>
                 </div>
                 </div>
+                <%= render 'cart/cart' %>
                      <a class="btn btn-info btn-sm ml-3">
                     <i class="fa fa-shopping-cart"></i> Cart
                     <span class="badge badge-light">3</span>
