--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,15 @@
-<div class="container mt-5 mb-5">
-    <div class="d-flex justify-content-center row">
-        <% @products.each do |product| %>
-        <div class="col-md-10">
-            <div class="row p-2 bg-white border rounded">
-                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div>
-                <div class="col-md-6 mt-1">
-                    <h5><%= product.title %></h5>
-                    <div class="mt-1 mb-1 spec-1"><span>Category: 
-                    <% product.categories.each do |cat| %>
-                    <%= cat.name %> &nbsp;
-                    <% end %>
-                    </span></div>
-                </div>
-                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                    <div class="d-flex flex-row align-items-center">
-                        <h4 class="mr-1">$<%= product.price %></h4>
-                    </div>
-                    <h6 class="text-monospace">Stock: <%= product.stock %></h6>
-                    <div class="d-flex flex-column mt-4"><%= link_to 'Details', product, class:"btn btn-primary btn-sm" %><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to cart</button></div>
+        <div class="col-lg-12 my-3">
+            <div class="pull-right">
+                <div class="btn-group">
+                    <button class="btn btn-info" id="list">
+                        List View
+                    </button>
+                    <button class="btn btn-danger" id="grid">
+                        Grid View
+                    </button>
                 </div>
             </div>
-        </div>
-        <% end %>
-    </div>
+            <div class="row">
+  <%= render @products %>
 </div>
-
-
-
-
 
