--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
             <div class="card bg-light mb-3">
                 <div class="card-body">
                     <p class="price"><%= @product.price %>$</p>
-                                                                <div class="form-group">
+                      <div class="form-group">
                         <span>Category:
                         <% if @product.has_categories? %>
                         <% @product.categories.each do |cat| %>
@@ -32,26 +32,15 @@
                         </div>
                     <form>
                     <h5>Stock: <span class="badge badge-secondary"><%= @product.stock %></span></h5>
+                       <%= form_with model: @order_item do |f| %>
                         <div class="form-group">
                             <label>Quantity :</label>
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="quantity-left-minus btn btn-danger btn-number"  data-type="minus" data-field="">
-                                        <i class="fa fa-minus"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control"  id="quantity" name="quantity" min="1" max="100" value="1">
-                                <div class="input-group-append">
-                                    <button type="button" class="quantity-right-plus btn btn-success btn-number" data-type="plus" data-field="">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <a href="cart.html" class="btn btn-success btn-lg btn-block text-uppercase">
-                            <i class="fa fa-shopping-cart"></i> Add To Cart
+                        <%#= f.hidden_field :product, value: product.id %>
+                        <%= f.number_field :quantity, value: 1, min: 1%>                                    
+                        <%= f.submit "Add To Cart", class:"btn btn-success btn-lg btn-block text-uppercase"%>
                         </a>
-                    </form>
+                        <% end %>
+                    </form>                   
                 </div>
             </div>
         </div>
@@ -85,3 +74,6 @@
     </div>
     <div class="badge badge-light"><i class="bi bi-arrow-return-left"> </i><%= link_to 'Back', products_path %>
 </div>
+
+
+                             
